refactor code to get clean code