@@ -10,7 +10,7 @@ import ec.edu.espe.master_gateway.shared.domain.port.out.AuthorizationPort;
 import java.util.List;
 import java.util.Objects;
 import java.util.UUID;
-import java.util.stream.Collectors;
+
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -49,6 +49,6 @@ public class ListRolesService implements ListRolesUseCase {
                 role.getEstado().name(),
                 role.getFechaCreacion()
             ))
-            .collect(Collectors.toList());
+            .toList();
     }
 }
